--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -3,9 +3,13 @@
 .home {
   margin: 0 auto;
   padding: 2em 1em;
-  background-color: var(--light-grey);
 
   @include breakpoint('medium') {
-    padding: 2em 5em;
+    width: 90%;
+    padding: 2em 0;
+  }
+
+  @include breakpoint('large') {
+    width: 80%;
   }
 }
